# poms

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  run.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: backend.yml  codeql.yml  deploy-backend.yml  deploy-frontend.yml  frontend.yml
assets/knowledge/: README.md  generate_pdfs.py  policies.md  vendors.json
assets/samples/: po_clean.xlsx  po_fuzzy.xlsx
backend/: main.py  pyproject.toml
backend/agent/: classifier.py  extractor.py  llm.py  prompts.py  router.py  validator.py
backend/api/routes/: analytics.py  orders.py  reviews.py  webhook.py
backend/core/: config.py  observability.py
backend/migrations/versions/: 001_initial_schema.py  002_reference_data_tables.py
backend/models/: __init__.py  email.py  enums.py  order.py  processing.py  reference.py  review.py  validation.py
backend/schemas/: orders.py  reviews.py  webhook.py
backend/scripts/: ingest_knowledge.py  seed_reference_data.py  test_e2e_email.py  test_pipeline.py
backend/services/: email.py  files.py  knowledge.py  pipeline.py  poller.py
backend/tests/: conftest.py
backend/tests/agent/: test_validator.py
backend/tests/api/: test_reviews.py  test_webhook.py
backend/tests/services/: test_email.py  test_files.py  test_pipeline.py
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: app.tsx  index.css  main.tsx
frontend/src/api/: analytics.ts  orders.ts  reviews.ts
frontend/src/hooks/: useAnalytics.ts  useOrders.ts  useReview.ts
frontend/src/mocks/: data.ts
frontend/src/pages/: analytics.tsx  dashboard.tsx  order.tsx
frontend/src/types/: index.ts
knowledge/: README.md  catalog.json  generate_pdfs.py
samples/: po_bad.xlsx
src/backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
src/backend/agent/: exceptions.py  extractor.py  llm.py  prompts.py  rag_validator.py  validator.py
src/backend/api/routes/: orders.py  reviews.py
src/backend/core/: config.py  database.py  observability.py  time.py
src/backend/migrations/: env.py
src/backend/migrations/versions/: 001_initial_schema.py  002_reference_data_tables.py
src/backend/models/: enums.py  processing.py  reference.py  review.py
src/backend/schemas/: analytics.py  extraction.py  orders.py  validation.py
src/backend/scripts/: ingest_knowledge.py  seed_reference_data.py  test_e2e_email.py  test_pipeline.py
src/backend/services/: email.py  pipeline.py  poller.py  reference.py
src/backend/tests/agent/: test_rag_validator.py  test_router.py
src/backend/tests/api/: test_analytics.py  test_orders.py  test_webhook.py
src/backend/tests/services/: test_email.py  test_files.py
src/frontend/: package.json  vite.config.ts
src/frontend/src/: app.tsx
src/infra/: README.md  bootstrap.sh  main.bicep
(+31 files in other folders)
