[project]
name = "poms-backend"
version = "0.1.0"
description = "POMS — Purchase Order Management System Backend"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115",
    "sqlmodel>=0.0.22",
    "alembic>=1.14",
    "asyncpg>=0.30",
    "pydantic-settings>=2.8",
    "loguru>=0.7",
    "agno>=1.0",
    "lancedb>=0.20",
    "pymupdf>=1.25",
    "pymupdf4llm>=0.0.17",
    "pandas>=2.2",
    "openai>=1.50",
    "langchain-text-splitters>=0.3",
    "google-api-python-client>=2.0",
    "google-auth-httplib2>=0.2",
    "google-auth-oauthlib>=1.0",
    "tantivy>=0.25.1",
    "pylance>=4.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.28",
    "ruff>=0.8",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "ARG", "SIM"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["core", "models", "schemas", "api", "agent", "services"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "session"
addopts = "-v --tb=short"

[tool.hatch.build.targets.wheel]
packages = ["core", "models", "schemas", "api", "agent", "services", "scripts"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
