[project]
name = "poms-backend"
version = "0.1.0"
description = "POMS — Purchase Order Management System Backend"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]==0.135.3",
    "sqlmodel==0.0.38",
    "alembic==1.18.4",
    "asyncpg==0.31.0",
    "pydantic-settings==2.13.1",
    "loguru==0.7.3",
    "agno==2.5.14",
    "lancedb==0.30.2",
    "pymupdf==1.27.2.2",
    "pymupdf4llm==1.27.2.2",
    "pandas==3.0.2",
    "openai==2.30.0",
    "langchain-text-splitters==1.1.1",
    "google-api-python-client==2.193.0",
    "google-auth-httplib2==0.3.1",
    "google-auth-oauthlib==1.3.1",
    "tantivy==0.25.1",
    "pylance==4.0.0",
    "openpyxl==3.1.5",
    "reportlab==4.4.10",
    "pillow==12.2.0",
]

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.1.0",
    "httpx==0.28.1",
    "ruff==0.15.9",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "ARG", "SIM"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["core", "models", "schemas", "api", "agent", "services"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "session"
addopts = "-v --tb=short"

[tool.hatch.build.targets.wheel]
packages = ["core", "models", "schemas", "api", "agent", "services", "scripts"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
